--- a/package.json
+++ b/package.json
@@ -3,16 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/parser": "^7.18.5",
+    "@babel/traverse": "^7.18.5",
+    "@monaco-editor/react": "^4.4.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/babel__traverse": "^7.17.1",
     "@types/jest": "^27.5.2",
+    "@types/jscodeshift": "0.7.2",
     "@types/node": "^16.11.39",
+    "@types/prettier": "^2.6.3",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "axios": "^0.27.2",
+    "bulmaswatch": "^0.8.1",
+    "esbuild-wasm": "0.8.27",
+    "jscodeshift": "0.11.0",
+    "localforage": "^1.10.0",
+    "monaco-jsx-highlighter": "0.0.15",
+    "prettier": "^2.7.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.3",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
