--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/prettier": "^2.6.3",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/react-resizable": "^3.0.1",
     "axios": "^0.27.2",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
@@ -25,6 +26,7 @@
     "prettier": "^2.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-resizable": "^3.0.4",
     "react-scripts": "4.0.3",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
