--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/parser": "^7.18.5",
     "@babel/traverse": "^7.18.5",
     "@monaco-editor/react": "^4.4.5",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "@types/prettier": "^2.6.3",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/react-redux": "^7.1.24",
     "@types/react-resizable": "^3.0.1",
     "@uiw/react-md-editor": "^3.14.4",
     "axios": "^0.27.2",
@@ -27,6 +29,7 @@
     "prettier": "^2.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^8.0.2",
     "react-resizable": "^3.0.4",
     "react-scripts": "4.0.3",
     "typescript": "^4.7.3",
